<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.18">
  <GVL Name="GVL_Variables" Id="{0b31be2f-6c9a-4798-a48f-4b64605f971e}">
    <Declaration><![CDATA[//{attribute 'qualified_only'}
VAR_GLOBAL
	
//	r_Accelerator_Setpoint	: REAL := 1E-12; (*unrealistic setpoint currently*)
	{attribute 'pytmc' := 'pv: TMO:FEE:VAC:OVRDON'}
	xSystemOverrideMode_FEE	: BOOL := FALSE; (* Global system override for the TMO FEE Vacuum System *)
	
	{attribute 'pytmc' := 'pv: TMO:NEH:VAC:OVRDON'}
	xSystemOverrideMode_TMO	: BOOL := FALSE; (* Global system override for the TMO hutch Vacuum System *)
	
	{attribute 'pytmc' := 'pv: TMO:NEH:TURBO:FAULT'}
	xTurboFault: BOOL := FALSE; (* True if any hutch turbo is not at speed or fault *)	
	
	{attribute 'pytmc' := 'pv: TMO:NEH:VALVE:FAULT'}
	xValveFault: BOOL := FALSE; (* True if any hutch turbo is not at speed or fault *)	
	
		{attribute 'pytmc' := 'pv: TMO:NEH:ALL:GCC:ENABLE'}
	xGCC_Enable_SW: BOOL := FALSE; (* True if any hutch turbo is not at speed or fault *)

	{attribute 'pytmc' := 'pv: TMO:LAMP:PTM_NOK'}
	{attribute 'TcLinkTo' := 	':=	TIIB[TMO_K4S6_DRL_01 (EK1100)]^K4S6_01_E22_IP1 (EL1004)^Channel 1^Input'}
	
	xLAMP_PTM_NOK AT%I*: BOOL := FALSE; (* True if any hutch turbo is not at speed or fault *)	
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>